--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "watch": "nodemon server.js"
+    "watch": "nodemon server.js",
+    "start-cluster": "pm2 start server.js -i 2"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,15 @@
   "homepage": "https://github.com/ekstep2/ektep-crowdsource-platform#readme",
   "dependencies": {
     "@google-cloud/storage": "^4.7.0",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^1.0.0",
     "express": "^4.17.1",
+    "helmet": "^3.22.0",
     "multer": "^1.4.2",
     "pg-promise": "^10.5.2",
+    "pm2": "^4.4.0",
     "uuid": "^7.0.3"
   },
   "engines": {
