--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
   "homepage": "https://github.com/ekstep2/ektep-crowdsource-platform#readme",
   "dependencies": {
     "@google-cloud/storage": "^4.7.0",
+    "chai": "^4.2.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^1.0.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "mocha": "^7.1.2",
     "multer": "^1.4.2",
     "pg-promise": "^10.5.2",
     "pm2": "^4.4.0",
+    "supertest": "^4.0.2",
     "uuid": "^7.0.3"
   },
   "engines": {
