--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
     "gulp-minify": "^3.1.0",
     "nodemon": "^2.0.3"
   }
