--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "multer": "^1.4.2",
     "pg-promise": "^10.5.2",
     "pm2": "^4.4.0",
+    "sinon": "^9.0.2",
     "supertest": "^4.0.2",
     "uuid": "^7.0.3"
   },
