--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,14 @@
-version: 2
+version: 2.1
 jobs:
   build:
     docker:
       — image: circleci/node:13.4
     working_directory: ~/crowdsource-dataplatform
     steps:
+
       — checkout
-      - run: npm install
- 
-      — run: npm test
+      
+      - run: 
+        command: npm install
+      — run: 
+        command: npm test
