--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,3 +10,9 @@ jobs:
         command: npm install
       — run: 
         command: npm test
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
