--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ jobs:
                   ./install.sh --quiet
                   echo "Installed GCLOUD"
                   echo ${GOOGLE_AUTH} > ${HOME}/gcp-key.json
+                  gcloud -v
+                  source /home/circleci/google-cloud-sdk/completion.bash.inc
+                  source /home/circleci/google-cloud-sdk/path.bash.inc
             - run:
                 name: Deploy in test env
                 command: |
