|Sreejith + Heera| Add circle-ci env var for app.yaml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,12 @@ jobs:
                   echo "Installing GCLOUD"
                   ./install.sh --quiet
                   echo "Installed GCLOUD"
+                  gcloud components update
                   echo ${GOOGLE_AUTH} > ${HOME}/gcp-key.json
-                  gcloud -v
+                  
                   source /home/circleci/google-cloud-sdk/completion.bash.inc
                   source /home/circleci/google-cloud-sdk/path.bash.inc
+                  gcloud -v
             - run:
                 name: Deploy in test env
                 command: |
