|Sreejith + Heera| Add circle-ci env var for app.yaml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,12 @@ jobs:
                   source /home/circleci/google-cloud-sdk/completion.bash.inc
                   source /home/circleci/google-cloud-sdk/path.bash.inc
                   gcloud -v
+                  cd {HOME}
                   gcloud components update
             - run:
                 name: Deploy in test env
                 command: |
+                  cd {HOME}
                   gcloud auth activate-service-account --key-file ${HOME}/gcp-key.json
                   gcloud --quiet config set project ${GCP_PROJECT}
                   cd ~/crowdsource-dataplatform
