--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,6 @@ jobs:
             - run:
                 name: tests
                 command: npm test
-            - run: 
-                name: export env
-                command: echo 'export DB_HOST="$DB_HOST"' >> $BASH_ENV
             - run:
                 name: install gcloud
                 command: |
@@ -39,6 +36,8 @@ jobs:
                   gcloud components update
                   gcloud auth activate-service-account --key-file ${HOME}/gcp-key.json
                   gcloud --quiet config set project ${GCP_PROJECT}
+                  echo 'export DB_HOST="$DB_HOST"' >> $BASH_ENV
+                  source $BASH_ENV
                   cd ~/project
                   gcloud app deploy app.yaml
                   rm ${HOME}/gcp-key.json
