|Sreejith + Heera| Add auto scale config in app.yaml.

--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,12 @@
 runtime: nodejs
 env: flex
 
-manual_scaling:
-  instances: 1
+automatic_scaling:
+  min_num_instances: 2
+  max_num_instances: 8
+  cool_down_period_sec: 90
+  cpu_utilization:
+    target_utilization: 0.7
 resources:
   cpu: 1
   memory_gb: 0.5
