--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ejs": "^1.0.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "jest": "^26.6.3",
     "mocha": "^7.1.2",
     "multer": "^1.4.2",
     "pg-promise": "^10.5.2",
