--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "nodemon src/server.js",
     "start-cluster": "pm2 start src/server.js -i 2",
     "test": "ENCRYPTION_KEY=CjksSAhoncsuosuy68sbLd35KkcHrSuwKJerEFCEWof= mocha",
-    "gulp": "gulp"
+    "gulp": "gulp",
+    "jest": "jest"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "jest": "^26.6.3",
+    "jquery": "^3.5.1",
     "mocha": "^7.1.2",
     "multer": "^1.4.2",
     "pg-promise": "^10.5.2",
