--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node": "12.16.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
     "babelify": "^10.0.0",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
