|Priyanshu + Sreejith| Added tests for fetch details

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/preset-env": "^7.12.11",
     "babelify": "^10.0.0",
     "del": "^5.1.0",
+    "fetch-mock": "^9.11.0",
     "gulp": "^4.0.2",
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^4.3.0",
