--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
-# .idea
+.idea
 .vscode
-# .out/
-# crowdsource-dataplatform.iml
+.out/
+crowdsource-dataplatform.iml
 .DS_Store
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
