--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "multer": "^1.4.2",
     "pg-promise": "^10.5.2",
     "pm2": "^4.4.0",
+    "regenerator-runtime": "^0.13.7",
     "sinon": "^9.0.2",
     "supertest": "^4.0.2",
     "uuid": "^7.0.3"
