--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/ekstep2/ektep-crowdsource-platform#readme",
   "dependencies": {
     "@google-cloud/storage": "^4.7.0",
+    "chromium": "^3.0.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "crypto-js": "^4.0.0",
@@ -29,6 +30,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^1.0.0",
     "express": "^4.17.1",
+    "gauge": "^3.0.0",
     "helmet": "^3.22.0",
     "jest": "^26.6.3",
     "jquery": "^3.5.1",
@@ -38,6 +40,7 @@
     "regenerator-runtime": "^0.13.7",
     "sinon": "^9.0.2",
     "supertest": "^4.0.2",
+    "taiko": "^1.1.0",
     "uuid": "^7.0.3"
   },
   "engines": {
